--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -484,3 +484,13 @@ form {
 }
 
 
+
+
+.form-container2 {
+    background-color: #F6F8FB;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+}
+
+
+
