Done add vulnerability assessment

--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -124,7 +124,7 @@
                                     </li>
                                 }
                                 <li>
-                                    <a href="#" class="dropdown-item" onclick="prepareDelete('@item.userID')"
+                                    <a href="#" class="dropdown-item text-danger" onclick="prepareDelete('@item.userID')"
                                        data-deleteid="@item.userID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
                                         Delete
                                     </a>
