Done view vulnerability assessment

--- a/Pages/disaster/profile/reliefgoodspack/Distribute.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Distribute.cshtml
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col">
                     <a class="btn btn-primary mb-2" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">
-                        <i class="bi bi-arrow-left-circle"></i>Go Back
+                        <i class="bi bi-arrow-left-circle"></i> Go Back
                     </a>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                                     <th>#</th>
                                     <th>Family Serial Number</th>
                                     <th>Family Member</th>
-                                    <th>Qty</th>
+                                    <th>Pack Qty</th>
                                     <th> </th>
                                 </tr>
                             </thead>
